update api to *support* pantheon
