# src/routes/leaderboard/speedrun.ts
@@ -1,7 +1,7 @@
 import { RaidHubRoute } from "../../RaidHubRoute"
 import { UrlPathsToRaid } from "../../data/leaderboards"
 import { cacheControl } from "../../middlewares/cache-control"
-import { zPlayerWithActivityData } from "../../schema/common"
+import { zActivityPlayerData, zPlayerInfo } from "../../schema/common"
 import { z, zDigitString, zISODateString, zPage, zPositiveInt } from "../../schema/zod"
 import { prisma } from "../../services/prisma"
 import { ok } from "../../util/response"
@@ -39,7 +39,12 @@ export const leaderboardSpeedrunRoute = new RaidHubRoute({
                             dateStarted: zISODateString(),
                             dateCompleted: zISODateString(),
                             duration: zPositiveInt(),
-                            players: z.array(zPlayerWithActivityData)
+                            players: z.array(
+                                z.object({
+                                    player: zPlayerInfo,
+                                    data: zActivityPlayerData
+                                })
+                            )
                         })
                     )
                 })
@@ -74,6 +79,7 @@ async function getSpeedrunLeaderboard(raid: RaidPath, opts: { page: number; coun
                     completed: true,
                     sherpas: true,
                     isFirstClear: true,
+                    timePlayedSeconds: true,
                     player: {
                         select: {
                             membershipId: true,
@@ -97,7 +103,7 @@ async function getSpeedrunLeaderboard(raid: RaidPath, opts: { page: number; coun
         dateCompleted: e.dateCompleted,
         duration: e.duration,
         players: e.activityPlayers.map(({ player, ...activity }) => ({
-            ...player,
+            player,
             data: activity
         }))
     }))
